--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,7 +2,7 @@
 
 // Gray and Brand Colors for use across theme
 
-$theme-primary:    #fed136;
+$theme-primary:    #aad5e8;
 $theme-danger:     #e74c3c;
 
 $gray-base:			#000 !default;
